# ChangeLog for riss

## v5.0.3

 * parameter dependencies
 * parameter dependencies can be used to reduce printed help
 * can print parameters into PCS file, according to specified dependency level
 * enables receiving equivalences before the first try to perform inprocessing