@@ -39,6 +39,7 @@ class PfolioConfig : public Config
     IntOption  threads;
     StringOption opt_defaultSetup;          // presets to run priss in given setup (DRUP, BMC, ...)
 //     StringOption opt_firstPPconfig;         // configuration for preprocessor of first solver object
+    StringOption opt_incarnationSetups;     // configurations for all the incarnations
 
     IntOption  opt_storageSize;             // size of the storage for clause sharing
 
