@@ -98,6 +98,10 @@ class CoreConfig : public Config
     IntOption opt_var_act_bump_mode; // bump activity of a variable based on the size/LBD of the generated learned clause
     IntOption opt_cls_act_bump_mode; // bump activity of a learned clause based on the size/LBD of the generated learned clause
 
+    BoolOption opt_receiveEquivalences;   // receive equivalenced (is turned automatically on after first succesful inprocessing)
+    BoolOption opt_refineReceivedClauses; // apply viviification to received clauses
+    BoolOption opt_resendRefinedClauses;  // resend refined clauses
+    
     BoolOption opt_pq_order;           // If true, use a priority queue to decide the order in which literals are implied
     // and what antecedent is used.  The priority attempts to choose an antecedent
     // that permits further backtracking in case of a contradiction on this level.               (default false)
