@@ -2,6 +2,7 @@
 
 ## v5.0.3
 
+ * parameters to control vivification of shared clauses
  * parameter dependencies
  * parameter dependencies can be used to reduce printed help
  * can print parameters into PCS file, according to specified dependency level
